@@ -135,8 +135,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(255, 235, 215));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_Byte::OnKillFocus));    // Must-have
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_Byte::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_Byte::OnKillFocus, this);    // Must-have
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_Byte::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -151,8 +151,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(255, 235, 215));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_UByte::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_UByte::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_UByte::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_UByte::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -167,8 +167,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(255, 225, 255));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_Float::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_Float::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_Float::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_Float::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -183,8 +183,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(215, 255, 255));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_Long::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_Long::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_Long::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_Long::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -199,8 +199,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(210, 230, 255));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_Short::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_Short::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_Short::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_Short::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -215,8 +215,8 @@ public:
         this->frame = frame;
         this->window = window;
         SetBackgroundColour(wxColour(210, 230, 255));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_UShort::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_UShort::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_UShort::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_UShort::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
@@ -232,8 +232,8 @@ public:
         this->window = window;
         MaxSize = CLength;
         SetBackgroundColour(wxColour(220, 255, 220));
-        Connect(GetId(), wxEVT_KILL_FOCUS, wxFocusEventHandler(TextCtrl_String::OnKillFocus));
-        Connect(GetId(), wxEVT_COMMAND_TEXT_ENTER, wxCommandEventHandler(TextCtrl_String::OnEnter));
+        Bind(wxEVT_KILL_FOCUS, &TextCtrl_String::OnKillFocus, this);
+        Bind(wxEVT_COMMAND_TEXT_ENTER, &TextCtrl_String::OnEnter, this);
     }
     int SaveEdits(bool forced = false);
     void replenish();
